--- a/templates/index.html
+++ b/templates/index.html
@@ -1,84 +1,50 @@
 <!DOCTYPE html>
-<!--[if IE 8]> 				 <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-
+<html lang="ru">
 <head>
-	<meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <!--meta name="kittycheck_parent" content=".kitty" />
-  <meta name="kittycheck_checkin_color" content="#2D3793" />
-  <meta name="kittycheck_position" content="left=0,top=0" />
-  <meta name="kittycheck_rumble" content="true" />
-  <meta name="kittycheck_site_uniq_id" content="addmetocc-@file@"/-->
-
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <title>Бобук :: @title@</title>
-  <link href='http://fonts.googleapis.com/css?family=Poiret+One&subset=latin,cyrillic,latin-ext' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/static/css/normalize.css" />
-  <link rel="stylesheet" href="/static/css/foundation.min.css" />
-  <link rel="stylesheet" href="/static/css/main.css" />
 
-  <script src="/static/js/vendor/custom.modernizr.js"></script>
-  <script src="/static/js/vendor/jquery.js"></script>
-  <!--script src="http://kittycheck.com/js/inject.js"></script-->
+  <!-- CSS  -->
+  <link href="/static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="/static/css/main.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-    <div class="row top">
-        <div class="large-10 columns">
-            <a href="#" data-dropdown="drop1"><div class="header-top">Недомысль и я</div></a>
-            <div class="header-bottom hide-for-small">Не бритый снизу, бритый сверху, но мнение-то имею...</div>
-        </div>
-        <div class="large-2 columns">
-            <div class="kitty"></div>
-            <a href="http://twitter.com/bobuk"><img src="/static/img/bobuk.png" class="right hide-for-small"/></a>
-        </div>
-        <hr class="header"/>
-    </div>
-    <div class="row">
-        <div class="large-12 large-centered columns">
-            <h1 class="instapaper_title titles"><a href="/pages/@file@" >@title@</a></h1>
-            <article class="instapaper_body">
-                @text@
-            </article>
-        </div>
-    </div>
-    <div class="row">
-        <div class="large-6 columns">
-            <ul class="button-group radius">
-                <li><a href="https://coinbase.com/checkouts/8aa47b1d7cdbb1aa7aecac3186c98773" target="_blank" class="button small">заБиткойнь</a></li>
-                <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=bobuk%40justos%2eorg&lc=RU&item_name=addmeto%2ecc&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" class="button small" target="_blank">заPayPalь</a></li>
-                <li><a href="#" data-reveal-id="myModal" class="button small">Я.Деньгуй</a></li>
-            </ul>
-        </div>
-        <div class="large-6 columns">
-            <a href="https://github.com/bobuk/addmeto.cc/blob/master/pages/@file@.md" class="small button secondary radius right">ЗаGitHubить!</a>
-        </div>
-    </div>
+  <nav class="light-blue lighten-1" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Бобук</a>
+      <ul class="right">
+        <li><a href="http://twitter.com/bobuk">@bobuk</a></li>
+      </ul>
 
-    <footer>
-        <div class="row">
-            <div class="large-12 columns">Григорий Бакунов (c) 2013-2015, скопировано правильно.
-            </div>
-        </div>
-    </footer>
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+    </div>
+  </nav>
+  <div class="container">
 
+    <h1 class="instapaper_title titles"><a href="/pages/@file@" >@title@</a></h1>
+    <article class="instapaper_body">
+        @text@
+    </article>
+
+    <div class="row">
+        <div class="col s10">
+                <a href="https://coinbase.com/checkouts/8aa47b1d7cdbb1aa7aecac3186c98773" target="_blank" class="btn">заБиткойнь</a>
+                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=bobuk%40justos%2eorg&lc=RU&item_name=addmeto%2ecc&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" class="btn" target="_blank">заPayPalь</a>
+                <a href="#" data-reveal-id="myModal" class="btn">Я.Деньгуй</a>
+        </div>
+        <div class="col s2">
+            <a href="https://github.com/bobuk/addmeto.cc/blob/master/pages/@file@.md" class="btn">ЗаGitHubить!</a>
+        </div>
+    </div>
+  </div>
+
+  <!--  Scripts-->
+  <script src="/static/js/jquery.js"></script>
+  <script src="/static/js/materialize.js"></script>
 <!-- Yandex.Metrika counter --><script type="text/javascript">(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter18771010 = new Ya.Metrika({id:18771010, webvisor:true, clickmap:true, trackLinks:true, accurateTrackBounce:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/18771010" style="position:absolute; left:-9999px;" alt="" /></div></noscript><!-- /Yandex.Metrika counter -->
 
-  <script src="/static/js/foundation.min.js"></script>
-  <script>
-    $(document).foundation();
-  </script>
-</body>
-
-<div id="myModal" class="reveal-modal medium">
-  <h2>Форма для Яндекс.Денег</h2>
-  <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/donate.xml?uid=4100130214808&amp;default-sum=100&amp;targets=%D0%BD%D0%B0+%D0%BF%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5+%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%B0&amp;target-visibility=on&amp;project-name=Addmeto.cc&amp;project-site=http%3A%2F%2Faddmeto.cc%2F&amp;button-text=05&amp;comment=on&amp;hint=%D0%9F%D0%BE%D0%B6%D0%B5%D0%BB%D0%B0%D1%82%D1%8C+%D1%87%D0%B5%D0%B3%D0%BE-%D0%BD%D0%B8%D0%B1%D1%83%D0%B4%D1%8C+%D0%B4%D0%BE%D0%B1%D1%80%D0%BE%D0%B3%D0%BE&amp;mail=on" width="450" height="201"></iframe>
-</div>
-<ul id="drop1" class="f-dropdown" data-dropdown-content>
-  <a href="/"><li>Сегодня</li></a>
-  <!--a href="/pages/archive"><li>Архив</li></a-->
-  <a href="https://github.com/bobuk/addmeto.cc/tree/master/pages/old"><li>Былое</li></a>
-  <a href="/about"><li>О проекте</li></a>
-  <a href="/feed"><li>RSS</li></a>
-</ul>
-
+  </body>
 </html>
